<resources>
    <string name="app_name">Challenge Client</string>
    <string name="please_wait">Please wait...</string>
    <string name="loading_projects">Loading projects...</string>
    <string name="register">Register</string>
    <string name="empty_credentials_error">Username and password is required</string>
    <string name="username_error">Username is too short</string>
    <string name="password_error">Password is too short</string>
    <string name="incorrect_credentials">Provided credentials are incorrect</string>
    <string name="title_activity_project">ProjectActivity</string>
    <string name="username">Username</string>
    <string name="submit">Submit</string>
    <string name="take_photo">Take a photo</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_register">RegisterActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="registration_username_hint">Username</string>
    <string name="registration_email_hint">Email</string>
    <string name="registration_password_hint">Password</string>
    <string name="registration_confirm_hint">Confirm password</string>
    <string name="registration_first_hint">First name</string>
    <string name="registration_last_hint">Last name</string>
    <string name="registration_skype_hint">Skype</string>

    <string name="registration_fields_error">All fields except Skype are mandatory.</string>
    <string name="registration_username_length_error">Username has to be at least 5 characters long.</string>
    <string name="registration_username_error">Please enter a valid username.</string>
    <string name="registration_email_error">Please enter a valid mail.</string>
    <string name="registration_password_length_error">Password has to be at least 6 characters long.</string>
    <string name="registration_password_confirmation_error">Passwords don\'t match.</string>
    <string name="registration_error">Username or mail already in use!</string>
    <string name="registration_success_title">Success</string>
    <string name="registration_success_message">Registration was successful! You will be logged in now.</string>
    <string name="title_activity_feedback">FeedbackActivity</string>

    <string name="feedback_hint">Enter your text here</string>
    <string name="feedback_group_title">Choose a group:</string>
    <string name="feedback_rate_title">Describe your feedback:</string>

    <string name="action_submit">Submit</string>

    <string name="groups_error">Something went wrong! Groups not received.</string>

    <string name="action_add_feedback">Add</string>
    <string name="feedback_success">Feedback was sent successfully!</string>

    <string name="something_wrong">Something went wrong!</string>

    <string name="code_empty_error">Please enter the invite code!</string>
    <string name="code_error">Entered code is not valid!</string>
    <string name="code_valid">You have successfully been added to the project!</string>
    <string name="code_used">This code is already used!</string>

    <string name="ranking">Ranking</string>
    <string name="title_activity_rank">RankActivity</string>

</resources>
