<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/register_coordinator"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_default" >

            <LinearLayout
                android:id="@+id/register_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small" >
                    <EditText
                        android:id="@+id/registration_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_username_hint"
                        style="@style/Input.Name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                    <EditText
                        android:id="@+id/registration_mail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_email_hint"
                        style="@style/Input.Email" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small" >
                    <EditText
                        android:id="@+id/registration_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_password_hint"
                        style="@style/Input.Password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small" >
                    <EditText
                        android:id="@+id/registration_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_confirm_hint"
                        style="@style/Input.Password" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small" >
                    <EditText
                        android:id="@+id/registration_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_first_hint"
                        style="@style/Input.Name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small" >
                    <EditText
                        android:id="@+id/registration_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_last_hint"
                        style="@style/Input.Name" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/spacing_small" >
                    <EditText
                        android:id="@+id/registration_skype"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/registration_skype_hint"
                        style="@style/Input.Name" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:background="@drawable/button"
                android:textColor="#DEFFF9"
                android:id="@+id/confirm_register_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/register_layout"
                android:layout_marginTop="@dimen/spacing_large"
                android:layout_marginBottom="@dimen/spacing_large"
                android:text="@string/register" />

        </RelativeLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>