<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FeedbackActivity" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/feedback_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/spacing_default"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/project_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/spacing_default"
                android:textSize="@dimen/text_size_standard"
                android:text="Title"/>

            <EditText
                android:id="@+id/feedback_text"
                android:layout_width="match_parent"
                android:layout_height="@dimen/textbox_height"
                android:gravity="top"
                android:scrollbars="vertical"
                android:hint="@string/feedback_hint"
                android:inputType="textMultiLine|textAutoCorrect|textCapSentences" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:textSize="@dimen/text_size_standard"
                android:text="@string/feedback_group_title" />

            <Spinner
                android:id="@+id/feedback_group_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_default"
                android:textSize="@dimen/text_size_standard"
                android:text="@string/feedback_rate_title" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_default"
                android:layout_marginStart="@dimen/spacing_default"
                android:layout_marginEnd="@dimen/spacing_default"
                android:layout_marginRight="@dimen/spacing_default" >
                <Button
                    android:id="@+id/feedback_button_negative"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="-1" />

                <Button
                    android:id="@+id/feedback_button_neutral"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="0" />

                <Button
                    android:id="@+id/feedback_button_positive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentEnd="true"
                    android:text="1" />

            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>